# codingexample

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
include/track_and_chase/: blob_detector.h  chase_planner.h  chase_robot.h  display_output.h  kalman_filter.h  pose_estimator.h
launch/: chase.launch
src/nodelets/: blob_detector.cpp  display_output.cpp  pose_estimator.cpp  test.cpp
src/nodes/: chase_planner.cpp  chase_robot.cpp  chase_robot_node.cpp  kalman_filter.cpp  track_and_chase.cpp
